--- a/assets/admin/css/sb-admin-2.css
+++ b/assets/admin/css/sb-admin-2.css
@@ -11589,9 +11589,10 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/600x800/?adsense");
+  background: url("http://pushadsdev.amandjaja.com/data/advertisement/image/495d50774a822d720190812031506.png");
   background-position: center;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .bg-register-image {
